--- a/Week 0/numpy-tutorial.ipynb
+++ b/Week 0/numpy-tutorial.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0.1\n"
+      "2.3.5\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -151,7 +151,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,13 +273,24 @@
    "metadata": {
     "id": "99cYx7qrSRDZ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5]\n",
+      " [ 6  7  8  9 10]]\n"
+     ]
+    }
+   ],
    "source": [
     "# What's the easiest way to create an array with shape (2,5) that returns\n",
     "# the same array as the statement below? (Hint: Use the \"numpy.arange\" function)\n",
     "#np.array([[1,2,3,4,5],[6,7,8,9,10]])\n",
     "\n",
-    "# Write code below:\n"
+    "# Write code below:\n",
+    "arrv = np.arange(1, 11).reshape(2,5)\n",
+    "print(arrv)"
    ]
   },
   {
@@ -1356,7 +1367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
